2.9.5
 - allows exportation of the graph as image (File->Export graph as image)
 - allows enlargement of extraction model pane [2738574]
 - added context menu for associations
 - new UI layout (vertical+horizontal)

2.9.4
 - enhancement of the sorting algorithm, single-row cycles detection
 - fixed compatibility issue with DB2 for z/OS

2.9.3
 - implemented column type replacement for DDL generation
 - ordering of rows in DbUnit datasets by primary keys
 - Test Suite added
 - new CLI option '-datamodel' allows to work with multiple data models
 - minor bug fixes

2.9.2
 - fixed issue with loading config file on some Windows XP systems

2.9.1
 - fixed compatibility issue with Informix 10
 - fixed issue with '#' character in driver's file name

2.9.0
 - added data filtering feature for data anonymization and test data aging [2530625]
 - added setting for Sybase jConnect 6.0

2.8.2
 - Support for qualified tables in DbUnit datasets.

2.8.1
 - Support for MySQL's SET and ENUM column type

2.8.0
 - animation step time is configurable
 - support for temporary working tables
 - elimination of DDL statements during export
 - internal refactorings

2.7.1
 - Sybase compatibility fixes
 - Support for MS SQL's uniqueidentifier type

2.7.0
 - support for DbUnit flat dataset format

2.6.1
 - support for PostgreSQL types BOOL, BIT, BIT(n), BIT VARYING and unbounded VARCHAR

2.6.0
 - tables not associated with subject table are rendered italic
 - support for BINARY/RAW column type
 - internal refactorings

2.5.9
 - workaround for swing bug 4618607, see http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4618607
 - minor GUI improvements

2.5.8
 - rendering of associations' cardinality
 - support for oracle DATE type which contains also time

2.5.7
 - the primary key of the table JAILER_ENTITY can be generated in a more compact way in order to reduce the risc to exceed the maximum number